fix the time alignment

--- a/assets/player.css
+++ b/assets/player.css
@@ -226,6 +226,7 @@ body {
   margin-top: 12px;
   overflow: hidden;
   position: relative;
+  border-radius: 4px;
 }
 
 .player .controls-progress-inner {
@@ -247,6 +248,7 @@ body {
   color: rgba(255, 255, 255, 0.8);
   font-size: 16px;
   font-weight: 400;
+  line-height: 32px;
 }
 
 .player .controls-cur-time {
